@@ -1,25 +1,33 @@
 package net.bytebuddy.dynamic.scaffold.inline;
 
 import net.bytebuddy.ByteBuddy;
-import net.bytebuddy.asm.ClassVisitorWrapper;
+import net.bytebuddy.asm.AsmVisitorWrapper;
+import net.bytebuddy.description.annotation.AnnotationDescription;
+import net.bytebuddy.description.field.FieldList;
+import net.bytebuddy.description.method.MethodDescription;
+import net.bytebuddy.description.method.MethodList;
 import net.bytebuddy.description.modifier.MethodManifestation;
+import net.bytebuddy.description.modifier.TypeManifestation;
+import net.bytebuddy.description.modifier.Visibility;
 import net.bytebuddy.description.type.TypeDescription;
 import net.bytebuddy.dynamic.AbstractDynamicTypeBuilderTest;
 import net.bytebuddy.dynamic.ClassFileLocator;
 import net.bytebuddy.dynamic.DynamicType;
-import net.bytebuddy.dynamic.MethodTransformer;
+import net.bytebuddy.dynamic.Transformer;
 import net.bytebuddy.dynamic.loading.ByteArrayClassLoader;
 import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
-import net.bytebuddy.dynamic.loading.PackageDefinitionStrategy;
+import net.bytebuddy.dynamic.loading.InjectionClassLoader;
 import net.bytebuddy.implementation.Implementation;
 import net.bytebuddy.implementation.MethodCall;
 import net.bytebuddy.implementation.StubMethod;
+import net.bytebuddy.implementation.bytecode.ByteCodeAppender;
 import net.bytebuddy.implementation.bytecode.constant.TextConstant;
 import net.bytebuddy.implementation.bytecode.member.MethodReturn;
+import net.bytebuddy.matcher.ElementMatchers;
 import net.bytebuddy.pool.TypePool;
 import net.bytebuddy.test.scope.GenericType;
-import net.bytebuddy.test.utility.ClassFileExtraction;
 import net.bytebuddy.test.utility.JavaVersionRule;
+import net.bytebuddy.utility.OpenedClassReader;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Rule;
@@ -30,14 +38,13 @@ import org.mockito.stubbing.Answer;
 import org.objectweb.asm.*;
 import org.objectweb.asm.commons.LocalVariablesSorter;
 
+import java.lang.annotation.Annotation;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.reflect.*;
 import java.lang.reflect.Type;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.security.AccessController;
-import java.security.ProtectionDomain;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
@@ -48,17 +55,20 @@ import static net.bytebuddy.matcher.ElementMatchers.isTypeInitializer;
 import static net.bytebuddy.matcher.ElementMatchers.named;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.Is.is;
-import static org.mockito.Matchers.any;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 public abstract class AbstractDynamicTypeBuilderForInliningTest extends AbstractDynamicTypeBuilderTest {
 
-    private static final ProtectionDomain DEFAULT_PROTECTION_DOMAIN = null;
-
     private static final String FOO = "foo", BAR = "bar";
 
+    private static final int QUX = 42;
+
     private static final String PARAMETER_NAME_CLASS = "net.bytebuddy.test.precompiled.ParameterNames";
+
+    private static final String SIMPLE_TYPE_ANNOTATED = "net.bytebuddy.test.precompiled.SimpleTypeAnnotatedType";
+
+    private static final String TYPE_VARIABLE_NAME = "net.bytebuddy.test.precompiled.TypeAnnotation", VALUE = "value";
 
     @Rule
     public MethodRule javaVersionRule = new JavaVersionRule();
@@ -67,7 +77,8 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Before
     public void setUp() throws Exception {
-        typePool = TypePool.Default.ofClassPath();
+        super.setUp();
+        typePool = TypePool.Default.ofSystemLoader();
     }
 
     @After
@@ -79,6 +90,10 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     protected abstract DynamicType.Builder<?> create(TypeDescription typeDescription, ClassFileLocator classFileLocator);
 
+    protected abstract DynamicType.Builder<?> createDisabledContext();
+
+    protected abstract DynamicType.Builder<?> createDisabledRetention(Class<?> annotatedClass);
+
     @Test
     public void testTypeInitializerRetention() throws Exception {
         Class<?> type = create(Qux.class)
@@ -86,7 +101,7 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
                 .make()
                 .load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded();
-        assertThat(type.newInstance(), notNullValue(Object.class));
+        assertThat(type.getDeclaredConstructor().newInstance(), notNullValue(Object.class));
         assertThat(type.getDeclaredField(FOO).get(null), is((Object) FOO));
         assertThat(type.getDeclaredField(BAR).get(null), is((Object) BAR));
     }
@@ -94,7 +109,7 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
     @Test
     public void testDefaultValue() throws Exception {
         Class<?> dynamicType = create(Baz.class)
-                .method(named(FOO)).withDefaultValue(FOO)
+                .method(named(FOO)).defaultValue(FOO, String.class)
                 .make()
                 .load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded();
@@ -105,7 +120,7 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
     @Test
     @JavaVersionRule.Enforce(8)
     public void testParameterMetaDataRetention() throws Exception {
-        Class<?> dynamicType = create(typePool.describe(PARAMETER_NAME_CLASS).resolve(), ClassFileLocator.ForClassLoader.ofClassPath())
+        Class<?> dynamicType = create(Class.forName(PARAMETER_NAME_CLASS))
                 .method(named(FOO)).intercept(StubMethod.INSTANCE)
                 .make()
                 .load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER)
@@ -127,15 +142,13 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Test
     public void testGenericType() throws Exception {
-        ClassLoader classLoader = new ByteArrayClassLoader(null,
-                ClassFileExtraction.of(GenericType.class), DEFAULT_PROTECTION_DOMAIN,
-                AccessController.getContext(),
-                ByteArrayClassLoader.PersistenceHandler.LATENT,
-                PackageDefinitionStrategy.NoOp.INSTANCE);
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(GenericType.class));
         Class<?> dynamicType = create(GenericType.Inner.class)
                 .method(named(FOO)).intercept(StubMethod.INSTANCE)
                 .make()
-                .load(classLoader, ClassLoadingStrategy.Default.INJECTION)
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
                 .getLoaded();
         assertThat(dynamicType.getTypeParameters().length, is(2));
         assertThat(dynamicType.getTypeParameters()[0].getName(), is("T"));
@@ -148,16 +161,16 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
         assertThat(dynamicType.getGenericSuperclass(), instanceOf(ParameterizedType.class));
         assertThat(((ParameterizedType) dynamicType.getGenericSuperclass()).getActualTypeArguments().length, is(1));
         assertThat(((ParameterizedType) dynamicType.getGenericSuperclass()).getActualTypeArguments()[0], instanceOf(ParameterizedType.class));
-        ParameterizedType superType = (ParameterizedType) ((ParameterizedType) dynamicType.getGenericSuperclass()).getActualTypeArguments()[0];
-        assertThat(superType.getActualTypeArguments().length, is(2));
-        assertThat(superType.getActualTypeArguments()[0], is((Type) dynamicType.getTypeParameters()[0]));
-        assertThat(superType.getActualTypeArguments()[1], is((Type) dynamicType.getTypeParameters()[1]));
-        assertThat(superType.getOwnerType(), instanceOf(ParameterizedType.class));
-        assertThat(((ParameterizedType) superType.getOwnerType()).getRawType(), instanceOf(Class.class));
-        assertThat(((Class<?>) ((ParameterizedType) superType.getOwnerType()).getRawType()).getName(), is(GenericType.class.getName()));
-        assertThat(((ParameterizedType) superType.getOwnerType()).getActualTypeArguments().length, is(1));
-        assertThat(((ParameterizedType) superType.getOwnerType()).getActualTypeArguments()[0],
-                is((Type) ((Class<?>) ((ParameterizedType) superType.getOwnerType()).getRawType()).getTypeParameters()[0]));
+        ParameterizedType superClass = (ParameterizedType) ((ParameterizedType) dynamicType.getGenericSuperclass()).getActualTypeArguments()[0];
+        assertThat(superClass.getActualTypeArguments().length, is(2));
+        assertThat(superClass.getActualTypeArguments()[0], is((Type) dynamicType.getTypeParameters()[0]));
+        assertThat(superClass.getActualTypeArguments()[1], is((Type) dynamicType.getTypeParameters()[1]));
+        assertThat(superClass.getOwnerType(), instanceOf(ParameterizedType.class));
+        assertThat(((ParameterizedType) superClass.getOwnerType()).getRawType(), instanceOf(Class.class));
+        assertThat(((Class<?>) ((ParameterizedType) superClass.getOwnerType()).getRawType()).getName(), is(GenericType.class.getName()));
+        assertThat(((ParameterizedType) superClass.getOwnerType()).getActualTypeArguments().length, is(1));
+        assertThat(((ParameterizedType) superClass.getOwnerType()).getActualTypeArguments()[0],
+                is((Type) ((Class<?>) ((ParameterizedType) superClass.getOwnerType()).getRawType()).getTypeParameters()[0]));
         assertThat(dynamicType.getGenericInterfaces().length, is(1));
         assertThat(dynamicType.getGenericInterfaces()[0], instanceOf(ParameterizedType.class));
         assertThat(((ParameterizedType) dynamicType.getGenericInterfaces()[0]).getActualTypeArguments()[0], instanceOf(ParameterizedType.class));
@@ -208,7 +221,7 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
                 .getLoaded();
         assertEquals(String.class, dynamicType.getDeclaredMethod(FOO).getReturnType());
         assertThat(dynamicType.getDeclaredMethod(FOO).getGenericReturnType(), is((Type) String.class));
-        BridgeRetention<String> bridgeRetention = (BridgeRetention<String>) dynamicType.newInstance();
+        BridgeRetention<String> bridgeRetention = (BridgeRetention<String>) dynamicType.getDeclaredConstructor().newInstance();
         assertThat(bridgeRetention.foo(), is(FOO));
         bridgeRetention.assertZeroCalls();
     }
@@ -228,7 +241,7 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
         assertEquals(Object.class, dynamicType.getDeclaredMethod(FOO, Object.class).getReturnType());
         assertThat(dynamicType.getDeclaredMethod(FOO, Object.class).getGenericReturnType(), is((Type) Object.class));
         assertThat(dynamicType.getDeclaredMethod(FOO, Object.class).isBridge(), is(true));
-        CallSuperMethod<String> callSuperMethod = (CallSuperMethod<String>) dynamicType.newInstance();
+        CallSuperMethod<String> callSuperMethod = (CallSuperMethod<String>) dynamicType.getDeclaredConstructor().newInstance();
         assertThat(callSuperMethod.foo(FOO), is(FOO));
         callSuperMethod.assertOnlyCall(FOO);
     }
@@ -254,16 +267,13 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Test
     public void testVisibilityBridge() throws Exception {
-        ClassLoader classLoader = new ByteArrayClassLoader(null,
-                ClassFileExtraction.of(PackagePrivateVisibilityBridgeExtension.class, VisibilityBridge.class, FooBar.class),
-                DEFAULT_PROTECTION_DOMAIN,
-                AccessController.getContext(),
-                ByteArrayClassLoader.PersistenceHandler.LATENT,
-                PackageDefinitionStrategy.NoOp.INSTANCE);
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(VisibilityBridge.class, FooBar.class));
         Class<?> type = create(PackagePrivateVisibilityBridgeExtension.class)
                 .modifiers(Opcodes.ACC_PUBLIC)
                 .make()
-                .load(classLoader, ClassLoadingStrategy.Default.INJECTION)
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
                 .getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         Constructor<?> constructor = type.getDeclaredConstructor();
@@ -291,16 +301,13 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Test
     public void testNoVisibilityBridgeForNonPublicType() throws Exception {
-        ClassLoader classLoader = new ByteArrayClassLoader(null,
-                ClassFileExtraction.of(PackagePrivateVisibilityBridgeExtension.class, VisibilityBridge.class, FooBar.class),
-                DEFAULT_PROTECTION_DOMAIN,
-                AccessController.getContext(),
-                ByteArrayClassLoader.PersistenceHandler.LATENT,
-                PackageDefinitionStrategy.NoOp.INSTANCE);
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(PackagePrivateVisibilityBridgeExtension.class, VisibilityBridge.class, FooBar.class));
         Class<?> type = create(PackagePrivateVisibilityBridgeExtension.class)
                 .modifiers(0)
                 .make()
-                .load(classLoader, ClassLoadingStrategy.Default.INJECTION)
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
                 .getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         assertThat(type.getDeclaredMethods().length, is(0));
@@ -308,16 +315,13 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Test
     public void testNoVisibilityBridgeForInheritedType() throws Exception {
-        ClassLoader classLoader = new ByteArrayClassLoader(null,
-                ClassFileExtraction.of(PublicVisibilityBridgeExtension.class, VisibilityBridge.class, FooBar.class),
-                DEFAULT_PROTECTION_DOMAIN,
-                AccessController.getContext(),
-                ByteArrayClassLoader.PersistenceHandler.LATENT,
-                PackageDefinitionStrategy.NoOp.INSTANCE);
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(PublicVisibilityBridgeExtension.class, VisibilityBridge.class, FooBar.class));
         Class<?> type = new ByteBuddy().subclass(PublicVisibilityBridgeExtension.class)
                 .modifiers(Opcodes.ACC_PUBLIC)
                 .make()
-                .load(classLoader, ClassLoadingStrategy.Default.INJECTION)
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
                 .getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         assertThat(type.getDeclaredMethods().length, is(0));
@@ -325,16 +329,13 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
 
     @Test
     public void testNoVisibilityBridgeForAbstractMethod() throws Exception {
-        ClassLoader classLoader = new ByteArrayClassLoader(null,
-                ClassFileExtraction.of(PackagePrivateVisibilityBridgeExtensionAbstractMethod.class, VisibilityBridgeAbstractMethod.class),
-                DEFAULT_PROTECTION_DOMAIN,
-                AccessController.getContext(),
-                ByteArrayClassLoader.PersistenceHandler.LATENT,
-                PackageDefinitionStrategy.NoOp.INSTANCE);
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(PackagePrivateVisibilityBridgeExtensionAbstractMethod.class, VisibilityBridgeAbstractMethod.class));
         Class<?> type = create(PackagePrivateVisibilityBridgeExtensionAbstractMethod.class)
                 .modifiers(Opcodes.ACC_PUBLIC | Opcodes.ACC_ABSTRACT)
                 .make()
-                .load(classLoader, ClassLoadingStrategy.Default.INJECTION)
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
                 .getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         assertThat(type.getDeclaredMethods().length, is(0));
@@ -344,23 +345,41 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
     public void testMethodTransformationExistingMethod() throws Exception {
         Class<?> type = create(Transform.class)
                 .method(named(FOO))
-                .intercept(new Implementation.Simple(new TextConstant(FOO), MethodReturn.REFERENCE),
-                        MethodTransformer.Simple.withModifiers(MethodManifestation.FINAL))
+                .intercept(new Implementation.Simple(new TextConstant(FOO), MethodReturn.REFERENCE))
+                .transform(Transformer.ForMethod.withModifiers(MethodManifestation.FINAL))
                 .make()
                 .load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded();
         Method foo = type.getDeclaredMethod(FOO);
-        assertThat(foo.invoke(type.newInstance()), is((Object) FOO));
+        assertThat(foo.invoke(type.getDeclaredConstructor().newInstance()), is((Object) FOO));
         assertThat(foo.getModifiers(), is(Opcodes.ACC_FINAL | Opcodes.ACC_PUBLIC));
     }
 
     @Test
+    public void testFieldTransformationExistingField() throws Exception {
+        Class<?> type = create(Transform.class)
+                .field(named(FOO))
+                .transform(Transformer.ForField.withModifiers(Visibility.PUBLIC))
+                .make()
+                .load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER)
+                .getLoaded();
+        assertThat(type.getDeclaredField(FOO).getModifiers(), is(Opcodes.ACC_PUBLIC));
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
     public void testReaderHint() throws Exception {
-        ClassVisitorWrapper classVisitorWrapper = mock(ClassVisitorWrapper.class);
-        when(classVisitorWrapper.wrap(any(ClassVisitor.class))).then(new Answer<ClassVisitor>() {
-            @Override
+        AsmVisitorWrapper asmVisitorWrapper = mock(AsmVisitorWrapper.class);
+        when(asmVisitorWrapper.wrap(any(TypeDescription.class),
+                any(ClassVisitor.class),
+                any(Implementation.Context.class),
+                any(TypePool.class),
+                any(FieldList.class),
+                any(MethodList.class),
+                anyInt(),
+                anyInt())).then(new Answer<ClassVisitor>() {
             public ClassVisitor answer(InvocationOnMock invocationOnMock) throws Throwable {
-                return new ClassVisitor(Opcodes.ASM5, (ClassVisitor) invocationOnMock.getArguments()[0]) {
+                return new ClassVisitor(OpenedClassReader.ASM_API, (ClassVisitor) invocationOnMock.getArguments()[1]) {
                     @Override
                     public MethodVisitor visitMethod(int access, String name, String desc, String signature, String[] exceptions) {
                         return new LocalVariablesSorter(access, desc, super.visitMethod(access, name, desc, signature, exceptions));
@@ -368,26 +387,116 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
                 };
             }
         });
-        when(classVisitorWrapper.mergeWriter(0)).thenReturn(ClassWriter.COMPUTE_MAXS);
-        when(classVisitorWrapper.mergeReader(0)).thenReturn(ClassReader.EXPAND_FRAMES);
+        when(asmVisitorWrapper.mergeWriter(0)).thenReturn(ClassWriter.COMPUTE_MAXS);
+        when(asmVisitorWrapper.mergeReader(0)).thenReturn(ClassReader.EXPAND_FRAMES);
         Class<?> type = create(StackMapFrames.class)
-                .classVisitor(classVisitorWrapper)
+                .visit(asmVisitorWrapper)
                 .make()
-                .load(null, ClassLoadingStrategy.Default.WRAPPER)
+                .load(ClassLoadingStrategy.BOOTSTRAP_LOADER, ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded();
-        assertThat(type.getDeclaredMethod(FOO).invoke(type.newInstance()), is((Object) BAR));
-        verify(classVisitorWrapper).mergeWriter(0);
-        verify(classVisitorWrapper).mergeReader(0);
-        verify(classVisitorWrapper).wrap(any(ClassVisitor.class));
-        verifyNoMoreInteractions(classVisitorWrapper);
+        assertThat(type.getDeclaredMethod(FOO).invoke(type.getDeclaredConstructor().newInstance()), is((Object) BAR));
+        verify(asmVisitorWrapper).mergeWriter(0);
+        verify(asmVisitorWrapper).mergeReader(0);
+        verify(asmVisitorWrapper).wrap(any(TypeDescription.class),
+                any(ClassVisitor.class),
+                any(Implementation.Context.class),
+                any(TypePool.class),
+                any(FieldList.class),
+                any(MethodList.class),
+                anyInt(),
+                anyInt());
+        verifyNoMoreInteractions(asmVisitorWrapper);
     }
 
     @Test(expected = IllegalStateException.class)
     public void testForbidTypeInitilizerInterception() throws Exception {
-        createPlain()
-                .context(Implementation.Context.Disabled.Factory.INSTANCE)
-                .invokable(isTypeInitializer()).intercept(StubMethod.INSTANCE)
+        createDisabledContext()
+                .initializer(new ByteCodeAppender.Simple())
                 .make();
+    }
+
+    @Test
+    public void testDisabledAnnotationRetention() throws Exception {
+        Class<?> type = createDisabledRetention(Annotated.class)
+                .field(ElementMatchers.any()).annotateField(new Annotation[0])
+                .method(ElementMatchers.any()).intercept(StubMethod.INSTANCE)
+                .make()
+                .load(new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                        ClassFileLocator.ForClassLoader.readToNames(SampleAnnotation.class)), ClassLoadingStrategy.Default.WRAPPER)
+                .getLoaded();
+        @SuppressWarnings("unchecked")
+        Class<? extends Annotation> sampleAnnotation = (Class<? extends Annotation>) type.getClassLoader().loadClass(SampleAnnotation.class.getName());
+        assertThat(type.isAnnotationPresent(sampleAnnotation), is(true));
+        assertThat(type.getDeclaredField(FOO).isAnnotationPresent(sampleAnnotation), is(false));
+        assertThat(type.getDeclaredMethod(FOO, Void.class).isAnnotationPresent(sampleAnnotation), is(false));
+        assertThat(type.getDeclaredMethod(FOO, Void.class).getParameterAnnotations()[0].length, is(0));
+    }
+
+    @Test
+    public void testEnabledAnnotationRetention() throws Exception {
+        Class<?> type = create(Annotated.class)
+                .field(ElementMatchers.any()).annotateField(new Annotation[0])
+                .method(ElementMatchers.any()).intercept(StubMethod.INSTANCE)
+                .make()
+                .load(new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                        ClassFileLocator.ForClassLoader.readToNames(SampleAnnotation.class)), ClassLoadingStrategy.Default.WRAPPER)
+                .getLoaded();
+        @SuppressWarnings("unchecked")
+        Class<? extends Annotation> sampleAnnotation = (Class<? extends Annotation>) type.getClassLoader().loadClass(SampleAnnotation.class.getName());
+        assertThat(type.isAnnotationPresent(sampleAnnotation), is(true));
+        assertThat(type.getDeclaredField(FOO).isAnnotationPresent(sampleAnnotation), is(true));
+        assertThat(type.getDeclaredMethod(FOO, Void.class).isAnnotationPresent(sampleAnnotation), is(true));
+        assertThat(type.getDeclaredMethod(FOO, Void.class).getParameterAnnotations()[0].length, is(1));
+        assertThat(type.getDeclaredMethod(FOO, Void.class).getParameterAnnotations()[0][0].annotationType(), is((Object) sampleAnnotation));
+    }
+
+    @Test
+    @JavaVersionRule.Enforce(8)
+    @SuppressWarnings("unchecked")
+    public void testAnnotationTypeOnInterfaceType() throws Exception {
+        Class<? extends Annotation> typeAnnotationType = (Class<? extends Annotation>) Class.forName(TYPE_VARIABLE_NAME);
+        MethodDescription.InDefinedShape value = TypeDescription.ForLoadedType.of(typeAnnotationType).getDeclaredMethods().filter(named(VALUE)).getOnly();
+        Class<?> type = create(Class.forName(SIMPLE_TYPE_ANNOTATED))
+                .merge(TypeManifestation.ABSTRACT)
+                .implement(TypeDescription.Generic.Builder.rawType(Callable.class)
+                        .build(AnnotationDescription.Builder.ofType(typeAnnotationType).define(VALUE, QUX * 3).build()))
+                .make()
+                .load(typeAnnotationType.getClassLoader(), ClassLoadingStrategy.Default.CHILD_FIRST)
+                .getLoaded();
+        assertThat(type.getInterfaces().length, is(2));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveInterfaceType(type, 0).asList().size(), is(1));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveInterfaceType(type, 0).asList().ofType(typeAnnotationType)
+                .getValue(value).resolve(Integer.class), is(QUX * 2));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveInterfaceType(type, 1).asList().size(), is(1));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveInterfaceType(type, 1).asList().ofType(typeAnnotationType)
+                .getValue(value).resolve(Integer.class), is(QUX * 3));
+    }
+
+    @Test
+    @JavaVersionRule.Enforce(8)
+    @SuppressWarnings("unchecked")
+    public void testAnnotationTypeOnTypeVariableType() throws Exception {
+        Class<? extends Annotation> typeAnnotationType = (Class<? extends Annotation>) Class.forName(TYPE_VARIABLE_NAME);
+        MethodDescription.InDefinedShape value = TypeDescription.ForLoadedType.of(typeAnnotationType).getDeclaredMethods().filter(named(VALUE)).getOnly();
+        Class<?> type = create(Class.forName(SIMPLE_TYPE_ANNOTATED))
+                .merge(TypeManifestation.ABSTRACT)
+                .typeVariable(BAR, TypeDescription.Generic.Builder.rawType(Callable.class)
+                        .build(AnnotationDescription.Builder.ofType(typeAnnotationType).define(VALUE, QUX * 4).build()))
+                .annotateTypeVariable(AnnotationDescription.Builder.ofType(typeAnnotationType).define(VALUE, QUX * 3).build())
+                .make()
+                .load(typeAnnotationType.getClassLoader(), ClassLoadingStrategy.Default.CHILD_FIRST)
+                .getLoaded();
+        assertThat(type.getTypeParameters().length, is(2));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[0]).asList().size(), is(1));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[0]).asList().ofType(typeAnnotationType)
+                .getValue(value).resolve(Integer.class), is(QUX));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[1]).asList().size(), is(1));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[1]).asList().ofType(typeAnnotationType)
+                .getValue(value).resolve(Integer.class), is(QUX * 3));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[1]).ofTypeVariableBoundType(0)
+                .asList().size(), is(1));
+        assertThat(TypeDescription.Generic.AnnotationReader.DISPATCHER.resolveTypeVariable(type.getTypeParameters()[1]).ofTypeVariableBoundType(0)
+                .asList().ofType(typeAnnotationType).getValue(value).resolve(Integer.class), is(QUX * 4));
     }
 
     public @interface Baz {
@@ -457,7 +566,10 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
         /* empty */
     }
 
+    @SuppressWarnings("unused")
     public static class Transform {
+
+        Void foo;
 
         public String foo() {
             return null;
@@ -482,5 +594,23 @@ public abstract class AbstractDynamicTypeBuilderForInliningTest extends Abstract
                     ? FOO
                     : BAR;
         }
+    }
+
+    @SampleAnnotation
+    @SuppressWarnings("unused")
+    public static class Annotated {
+
+        @SampleAnnotation
+        Void foo;
+
+        @SampleAnnotation
+        void foo(@SampleAnnotation Void v) {
+            /* empty */
+        }
+    }
+
+    @Retention(RetentionPolicy.RUNTIME)
+    public @interface SampleAnnotation {
+        /* empty */
     }
 }
