@@ -2,19 +2,19 @@ package net.bytebuddy.dynamic.scaffold.inline;
 
 import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.description.annotation.AnnotationDescription;
-import net.bytebuddy.description.field.FieldList;
-import net.bytebuddy.description.method.MethodList;
 import net.bytebuddy.description.type.PackageDescription;
 import net.bytebuddy.description.type.TypeDescription;
-import net.bytebuddy.description.type.generic.GenericTypeList;
 import net.bytebuddy.dynamic.ClassFileLocator;
 import net.bytebuddy.dynamic.DynamicType;
 import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
+import net.bytebuddy.dynamic.scaffold.TypeValidation;
+import net.bytebuddy.implementation.Implementation;
 import net.bytebuddy.implementation.MethodDelegation;
 import net.bytebuddy.implementation.StubMethod;
 import net.bytebuddy.implementation.SuperMethodCall;
+import net.bytebuddy.implementation.attribute.AnnotationRetention;
+import net.bytebuddy.matcher.ElementMatchers;
 import net.bytebuddy.test.utility.JavaVersionRule;
-import net.bytebuddy.test.utility.ObjectPropertyAssertion;
 import net.bytebuddy.test.visibility.PackageAnnotation;
 import net.bytebuddy.test.visibility.Sample;
 import org.hamcrest.CoreMatchers;
@@ -25,17 +25,11 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.reflect.Field;
 import java.net.URL;
 import java.net.URLClassLoader;
-import java.util.Collections;
-import java.util.List;
 
 import static net.bytebuddy.matcher.ElementMatchers.any;
 import static net.bytebuddy.matcher.ElementMatchers.named;
-import static org.hamcrest.CoreMatchers.notNullValue;
-import static org.hamcrest.CoreMatchers.nullValue;
+import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.Is.is;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
 public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForInliningTest {
 
@@ -43,19 +37,28 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
 
     private static final String DEFAULT_METHOD_INTERFACE = "net.bytebuddy.test.precompiled.SingleDefaultMethodInterface";
 
-    @Override
     protected DynamicType.Builder<?> createPlain() {
         return create(Foo.class);
     }
 
-    @Override
+    protected DynamicType.Builder<?> createDisabledContext() {
+        return new ByteBuddy().with(Implementation.Context.Disabled.Factory.INSTANCE).rebase(Foo.class);
+    }
+
+    protected DynamicType.Builder createDisabledRetention(Class<?> annotatedClass) {
+        return new ByteBuddy().with(AnnotationRetention.DISABLED).rebase(annotatedClass);
+    }
+
     protected DynamicType.Builder<?> create(Class<?> type) {
         return new ByteBuddy().rebase(type);
     }
 
-    @Override
     protected DynamicType.Builder<?> create(TypeDescription typeDescription, ClassFileLocator classFileLocator) {
         return new ByteBuddy().rebase(typeDescription, classFileLocator);
+    }
+
+    protected DynamicType.Builder<?> createPlainWithoutValidation() {
+        return new ByteBuddy().with(TypeValidation.DISABLED).redefine(Foo.class);
     }
 
     @Test
@@ -63,7 +66,7 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
         DynamicType.Unloaded<?> dynamicType = new ByteBuddy()
                 .rebase(Bar.class)
                 .make();
-        assertThat(dynamicType.getRawAuxiliaryTypes().size(), is(0));
+        assertThat(dynamicType.getAuxiliaryTypes().size(), is(0));
         Class<?> type = dynamicType.load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER).getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         assertThat(type.getDeclaredMethods().length, is(0));
@@ -77,7 +80,7 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
                 .rebase(Bar.class)
                 .constructor(any()).intercept(SuperMethodCall.INSTANCE)
                 .make();
-        assertThat(dynamicType.getRawAuxiliaryTypes().size(), is(1));
+        assertThat(dynamicType.getAuxiliaryTypes().size(), is(1));
         Class<?> type = dynamicType.load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER).getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(2));
         assertThat(type.getDeclaredMethods().length, is(0));
@@ -91,7 +94,7 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
                 .rebase(Qux.class)
                 .method(named(BAR)).intercept(StubMethod.INSTANCE)
                 .make();
-        assertThat(dynamicType.getRawAuxiliaryTypes().size(), is(0));
+        assertThat(dynamicType.getAuxiliaryTypes().size(), is(0));
         Class<?> type = dynamicType.load(new URLClassLoader(new URL[0], null), ClassLoadingStrategy.Default.WRAPPER).getLoaded();
         assertThat(type.getDeclaredConstructors().length, is(1));
         assertThat(type.getDeclaredMethods().length, is(3));
@@ -105,7 +108,7 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
     public void testPackageRebasement() throws Exception {
         Class<?> packageType = new ByteBuddy()
                 .rebase(Sample.class.getPackage(), ClassFileLocator.ForClassLoader.of(getClass().getClassLoader()))
-                .annotateType(AnnotationDescription.Builder.forType(Baz.class).make())
+                .annotateType(AnnotationDescription.Builder.ofType(Baz.class).build())
                 .make()
                 .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.CHILD_FIRST)
                 .getLoaded();
@@ -119,11 +122,25 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
         assertThat(packageType.getAnnotation(Baz.class), notNullValue(Baz.class));
     }
 
+    @Test
+    public void testRebaseOfRenamedType() throws Exception {
+        Class<?> rebased = new ByteBuddy()
+                .rebase(Sample.class)
+                .name(Sample.class.getName() + FOO)
+                .constructor(ElementMatchers.any())
+                .intercept(SuperMethodCall.INSTANCE)
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
+                .getLoaded();
+        assertThat(rebased.getName(), is(Sample.class.getName() + FOO));
+        assertThat(rebased.getDeclaredConstructors().length, is(2));
+    }
+
     @Test(expected = IllegalStateException.class)
     public void testCannotRebaseDefinedMethod() throws Exception {
         new ByteBuddy()
                 .rebase(Foo.class)
-                .defineMethod(FOO, void.class, Collections.<Class<?>>emptyList()).intercept(SuperMethodCall.INSTANCE)
+                .defineMethod(FOO, void.class).intercept(SuperMethodCall.INSTANCE)
                 .make();
     }
 
@@ -142,31 +159,9 @@ public class RebaseDynamicTypeBuilderTest extends AbstractDynamicTypeBuilderForI
                 .make()
                 .load(dynamicInterfaceType.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER)
                 .getLoaded();
-        assertThat(dynamicClassType.getMethod(FOO).invoke(dynamicClassType.newInstance()), is((Object) (FOO + BAR)));
+        assertThat(dynamicClassType.getMethod(FOO).invoke(dynamicClassType.getDeclaredConstructor().newInstance()), is((Object) (FOO + BAR)));
         assertThat(dynamicInterfaceType.getDeclaredMethods().length, is(3));
         assertThat(dynamicClassType.getDeclaredMethods().length, is(0));
-    }
-
-    @Test
-    public void testObjectProperties() throws Exception {
-        ObjectPropertyAssertion.of(RebaseDynamicTypeBuilder.class).create(new ObjectPropertyAssertion.Creator<List<?>>() {
-            @Override
-            public List<?> create() {
-                TypeDescription typeDescription = mock(TypeDescription.class);
-                when(typeDescription.asErasure()).thenReturn(typeDescription);
-                return Collections.singletonList(typeDescription);
-            }
-        }).create(new ObjectPropertyAssertion.Creator<TypeDescription>() {
-            @Override
-            public TypeDescription create() {
-                TypeDescription typeDescription = mock(TypeDescription.class);
-                when(typeDescription.asErasure()).thenReturn(typeDescription);
-                when(typeDescription.getInterfaces()).thenReturn(new GenericTypeList.Explicit(Collections.singletonList(typeDescription)));
-                when(typeDescription.getDeclaredFields()).thenReturn(new FieldList.Empty());
-                when(typeDescription.getDeclaredMethods()).thenReturn(new MethodList.Empty());
-                return typeDescription;
-            }
-        }).apply();
     }
 
     @Retention(RetentionPolicy.RUNTIME)
