@@ -1,27 +1,21 @@
 package net.bytebuddy.implementation;
 
-import net.bytebuddy.description.type.TypeDescription;
-import net.bytebuddy.description.type.generic.GenericTypeDescription;
-import net.bytebuddy.description.type.generic.GenericTypeList;
+import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 import net.bytebuddy.test.utility.JavaVersionRule;
-import net.bytebuddy.test.utility.ObjectPropertyAssertion;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.MethodRule;
 
 import java.lang.reflect.Method;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
 
-import static net.bytebuddy.matcher.ElementMatchers.*;
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
+import static net.bytebuddy.matcher.ElementMatchers.not;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
 
-public class DefaultMethodCallTest extends AbstractImplementationTest {
+public class DefaultMethodCallTest {
 
     private static final String FOO = "foo", QUX = "qux";
 
@@ -39,25 +33,26 @@ public class DefaultMethodCallTest extends AbstractImplementationTest {
     @Test
     @JavaVersionRule.Enforce(8)
     public void testUnambiguousDefaultMethod() throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Object.class,
-                DefaultMethodCall.unambiguousOnly(),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                Class.forName(SINGLE_DEFAULT_METHOD));
+        DynamicType.Loaded<?> loaded = new ByteBuddy()
+                .subclass(Object.class)
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD))
+                .intercept(DefaultMethodCall.unambiguousOnly())
+                .make()
+                .load(Class.forName(SINGLE_DEFAULT_METHOD).getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         Method method = loaded.getLoaded().getDeclaredMethod(FOO);
-        Object instance = loaded.getLoaded().newInstance();
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(method.invoke(instance), is((Object) FOO));
     }
 
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(8)
     public void testAmbiguousDefaultMethodThrowsException() throws Exception {
-        implement(Object.class,
-                DefaultMethodCall.unambiguousOnly(),
-                getClass().getClassLoader(),
-                not(isDeclaredBy(Object.class)),
-                Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE));
+        new ByteBuddy()
+                .subclass(Object.class)
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE))
+                .intercept(DefaultMethodCall.unambiguousOnly())
+                .make();
     }
 
     @Test
@@ -77,108 +72,88 @@ public class DefaultMethodCallTest extends AbstractImplementationTest {
                                       Class<?> secondInterface,
                                       Object expectedResult,
                                       Class<?>... preferredInterfaces) throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Object.class,
-                DefaultMethodCall.prioritize(preferredInterfaces),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                preferredInterface, secondInterface);
+        DynamicType.Loaded<?> loaded = new ByteBuddy()
+                .subclass(Object.class)
+                .implement(preferredInterface, secondInterface)
+                .intercept(DefaultMethodCall.prioritize(preferredInterfaces))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         Method method = loaded.getLoaded().getDeclaredMethod(FOO);
-        Object instance = loaded.getLoaded().newInstance();
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(method.invoke(instance), is(expectedResult));
     }
 
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(8)
     public void testUnrelatedPreferredDefaultMethodThrowsException() throws Exception {
-        implement(Object.class,
-                DefaultMethodCall.prioritize(Class.forName(NON_OVERRIDING_INTERFACE)),
-                getClass().getClassLoader(),
-                not(isDeclaredBy(Object.class)),
-                Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE));
+        new ByteBuddy()
+                .subclass(Object.class)
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE))
+                .intercept(DefaultMethodCall.prioritize(Class.forName(NON_OVERRIDING_INTERFACE)))
+                .make();
     }
 
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(8)
     public void testNonDeclaredDefaultMethodThrowsException() throws Exception {
-        implement(Class.forName(SINGLE_DEFAULT_METHOD_CLASS),
-                DefaultMethodCall.unambiguousOnly(),
-                getClass().getClassLoader(),
-                not(isDeclaredBy(Object.class)));
+        new ByteBuddy()
+                .subclass(Class.forName(SINGLE_DEFAULT_METHOD_CLASS))
+                .method(not(isDeclaredBy(Object.class)))
+                .intercept(DefaultMethodCall.unambiguousOnly())
+                .make();
     }
 
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(8)
     public void testNonDeclaredPreferredDefaultMethodThrowsException() throws Exception {
-        implement(Class.forName(SINGLE_DEFAULT_METHOD_CLASS),
-                DefaultMethodCall.prioritize(Class.forName(SINGLE_DEFAULT_METHOD)),
-                getClass().getClassLoader(),
-                not(isDeclaredBy(Object.class)));
+        new ByteBuddy()
+                .subclass(Class.forName(SINGLE_DEFAULT_METHOD_CLASS))
+                .method(not(isDeclaredBy(Object.class)))
+                .intercept(DefaultMethodCall.prioritize(Class.forName(SINGLE_DEFAULT_METHOD)))
+                .make();
     }
 
     @Test
     @JavaVersionRule.Enforce(8)
     public void testDeclaredAndImplementedMethod() throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Class.forName(SINGLE_DEFAULT_METHOD_CLASS),
-                DefaultMethodCall.unambiguousOnly(),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                Class.forName(SINGLE_DEFAULT_METHOD));
+        DynamicType.Loaded<?> loaded = new ByteBuddy()
+                .subclass(Class.forName(SINGLE_DEFAULT_METHOD_CLASS))
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD))
+                .method(not(isDeclaredBy(Object.class)))
+                .intercept(DefaultMethodCall.unambiguousOnly())
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         Method method = loaded.getLoaded().getDeclaredMethod(FOO);
-        Object instance = loaded.getLoaded().newInstance();
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(method.invoke(instance), is((Object) FOO));
     }
 
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(8)
     public void testDeclaredAndImplementedAmbiguousMethodThrowsException() throws Exception {
-        implement(Class.forName(SINGLE_DEFAULT_METHOD_CLASS),
-                DefaultMethodCall.unambiguousOnly(),
-                getClass().getClassLoader(),
-                not(isDeclaredBy(Object.class)),
-                Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE));
+        new ByteBuddy()
+                .subclass(Class.forName(SINGLE_DEFAULT_METHOD_CLASS))
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE))
+                .method(not(isDeclaredBy(Object.class)))
+                .intercept(DefaultMethodCall.unambiguousOnly())
+                .make();
     }
 
     @Test
     @JavaVersionRule.Enforce(8)
     public void testDeclaredAndImplementedAmbiguousMethodWithPreference() throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Class.forName(SINGLE_DEFAULT_METHOD_CLASS),
-                DefaultMethodCall.prioritize(Class.forName(SINGLE_DEFAULT_METHOD)),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE));
+        DynamicType.Loaded<?> loaded = new ByteBuddy()
+                .subclass(Class.forName(SINGLE_DEFAULT_METHOD_CLASS))
+                .implement(Class.forName(SINGLE_DEFAULT_METHOD), Class.forName(CONFLICTING_INTERFACE))
+                .method(not(isDeclaredBy(Object.class)))
+                .intercept(DefaultMethodCall.prioritize(Class.forName(SINGLE_DEFAULT_METHOD)))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         Method method = loaded.getLoaded().getDeclaredMethod(FOO);
-        Object instance = loaded.getLoaded().newInstance();
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(method.invoke(instance), is((Object) FOO));
-    }
-
-    @Test
-    public void testObjectProperties() throws Exception {
-        ObjectPropertyAssertion.of(DefaultMethodCall.class).create(new ObjectPropertyAssertion.Creator<List<?>>() {
-            @Override
-            public List<?> create() {
-                TypeDescription typeDescription = mock(TypeDescription.class);
-                when(typeDescription.isInterface()).thenReturn(true);
-                when(typeDescription.asErasure()).thenReturn(typeDescription);
-                when(typeDescription.getSort()).thenReturn(GenericTypeDescription.Sort.NON_GENERIC);
-                return Collections.singletonList(typeDescription);
-            }
-        }).apply();
-        final TypeDescription removalType = mock(TypeDescription.class);
-        ObjectPropertyAssertion.of(DefaultMethodCall.Appender.class).refine(new ObjectPropertyAssertion.Refinement<Implementation.Target>() {
-            @Override
-            public void apply(Implementation.Target mock) {
-                TypeDescription typeDescription = mock(TypeDescription.class);
-                when(typeDescription.getInterfaces()).thenReturn(new GenericTypeList.Explicit(Arrays.asList(removalType, mock(TypeDescription.class))));
-                when(mock.getTypeDescription()).thenReturn(typeDescription);
-            }
-        }).create(new ObjectPropertyAssertion.Creator<List<?>>() {
-            @Override
-            public List<?> create() {
-                return Arrays.asList(removalType, mock(TypeDescription.class));
-            }
-        }).apply();
     }
 }
