@@ -1,23 +1,25 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
+import net.bytebuddy.description.modifier.Ownership;
+import net.bytebuddy.description.modifier.Visibility;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 import net.bytebuddy.test.utility.CallTraceable;
-import net.bytebuddy.test.utility.ObjectPropertyAssertion;
 import org.junit.Test;
-import org.objectweb.asm.Opcodes;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
-import java.util.LinkedList;
+import java.util.ArrayList;
 import java.util.List;
 
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.IsNot.not;
 
-public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
+public class InvocationHandlerAdapterTest {
 
     private static final String FOO = "foo", BAR = "bar", QUX = "qux";
 
@@ -26,11 +28,37 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
     @Test
     public void testStaticAdapterWithoutCache() throws Exception {
         Foo foo = new Foo();
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, InvocationHandlerAdapter.of(foo));
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(InvocationHandlerAdapter.of(foo).withoutMethodCache())
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(0));
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         assertThat(loaded.getLoaded().getDeclaredFields().length, is(1));
-        Bar instance = loaded.getLoaded().newInstance();
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
+        assertThat(instance.bar(FOO), is((Object) instance));
+        assertThat(foo.methods.size(), is(1));
+        assertThat(instance.bar(FOO), is((Object) instance));
+        assertThat(foo.methods.size(), is(2));
+        assertThat(foo.methods.get(0), not(sameInstance(foo.methods.get(1))));
+        instance.assertZeroCalls();
+    }
+
+    @Test
+    public void testStaticAdapterPrivileged() throws Exception {
+        Foo foo = new Foo();
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(InvocationHandlerAdapter.of(foo).withoutMethodCache().withPrivilegedLookup())
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(1));
+        assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
+        assertThat(loaded.getLoaded().getDeclaredFields().length, is(1));
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.bar(FOO), is((Object) instance));
         assertThat(foo.methods.size(), is(1));
         assertThat(instance.bar(FOO), is((Object) instance));
@@ -42,11 +70,16 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
     @Test
     public void testStaticAdapterWithoutCacheForPrimitiveValue() throws Exception {
         Qux qux = new Qux();
-        DynamicType.Loaded<Baz> loaded = implement(Baz.class, InvocationHandlerAdapter.of(qux));
+        DynamicType.Loaded<Baz> loaded = new ByteBuddy()
+                .subclass(Baz.class)
+                .method(isDeclaredBy(Baz.class))
+                .intercept(InvocationHandlerAdapter.of(qux).withoutMethodCache())
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(0));
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         assertThat(loaded.getLoaded().getDeclaredFields().length, is(1));
-        Baz instance = loaded.getLoaded().newInstance();
+        Baz instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.bar(BAZ), is(BAZ * 2L));
         instance.assertZeroCalls();
     }
@@ -54,11 +87,16 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
     @Test
     public void testStaticAdapterWithMethodCache() throws Exception {
         Foo foo = new Foo();
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, InvocationHandlerAdapter.of(foo).withMethodCache());
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(InvocationHandlerAdapter.of(foo))
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(0));
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         assertThat(loaded.getLoaded().getDeclaredFields().length, is(2));
-        Bar instance = loaded.getLoaded().newInstance();
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.bar(FOO), is((Object) instance));
         assertThat(foo.methods.size(), is(1));
         assertThat(instance.bar(FOO), is((Object) instance));
@@ -69,14 +107,20 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
 
     @Test
     public void testInstanceAdapterWithoutCache() throws Exception {
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, InvocationHandlerAdapter.toInstanceField(QUX));
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .defineField(QUX, InvocationHandler.class, Visibility.PUBLIC)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(InvocationHandlerAdapter.toField(QUX).withoutMethodCache())
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(0));
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         assertThat(loaded.getLoaded().getDeclaredFields().length, is(1));
         Field field = loaded.getLoaded().getDeclaredField(QUX);
-        assertThat(field.getModifiers(), is(Modifier.PUBLIC | Opcodes.ACC_SYNTHETIC));
+        assertThat(field.getModifiers(), is(Modifier.PUBLIC));
         field.setAccessible(true);
-        Bar instance = loaded.getLoaded().newInstance();
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         Foo foo = new Foo();
         field.set(instance, foo);
         assertThat(instance.bar(FOO), is((Object) instance));
@@ -89,14 +133,20 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
 
     @Test
     public void testInstanceAdapterWithMethodCache() throws Exception {
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, InvocationHandlerAdapter.toInstanceField(QUX).withMethodCache());
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .defineField(QUX, InvocationHandler.class, Visibility.PUBLIC)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(InvocationHandlerAdapter.toField(QUX))
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(loaded.getLoadedAuxiliaryTypes().size(), is(0));
         assertThat(loaded.getLoaded().getDeclaredMethods().length, is(1));
         assertThat(loaded.getLoaded().getDeclaredFields().length, is(2));
         Field field = loaded.getLoaded().getDeclaredField(QUX);
-        assertThat(field.getModifiers(), is(Modifier.PUBLIC | Opcodes.ACC_SYNTHETIC));
+        assertThat(field.getModifiers(), is(Modifier.PUBLIC));
         field.setAccessible(true);
-        Bar instance = loaded.getLoaded().newInstance();
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         Foo foo = new Foo();
         field.set(instance, foo);
         assertThat(instance.bar(FOO), is((Object) instance));
@@ -107,34 +157,33 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
         instance.assertZeroCalls();
     }
 
-    @Test
-    public void testEqualsHashCodeStaticAdapter() throws Exception {
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)).hashCode(), is(InvocationHandlerAdapter.of(new Foo(FOO)).hashCode()));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)), is(InvocationHandlerAdapter.of(new Foo(FOO))));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)).hashCode(), not(is(InvocationHandlerAdapter.of(new Foo(BAR)).hashCode())));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)), not(is(InvocationHandlerAdapter.of(new Foo(BAR)))));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)).hashCode(), not(is(InvocationHandlerAdapter.of(new Foo(FOO), QUX).hashCode())));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO)), not(is(InvocationHandlerAdapter.of(new Foo(FOO), QUX))));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO), QUX).hashCode(), not(is(InvocationHandlerAdapter.toInstanceField(QUX).hashCode())));
-        assertThat(InvocationHandlerAdapter.of(new Foo(FOO), QUX), not(is(InvocationHandlerAdapter.toInstanceField(QUX))));
+    @Test(expected = IllegalStateException.class)
+    public void testStaticMethod() throws Exception {
+        new ByteBuddy()
+                .subclass(Object.class)
+                .defineField(QUX, InvocationHandler.class)
+                .defineMethod(FOO, void.class, Ownership.STATIC)
+                .intercept(InvocationHandlerAdapter.toField(QUX))
+                .make();
     }
 
-    @Test
-    public void testEqualsHashCodeInstanceAdapter() throws Exception {
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX).hashCode(), is(InvocationHandlerAdapter.toInstanceField(QUX).hashCode()));
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX), is(InvocationHandlerAdapter.toInstanceField(QUX)));
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX).hashCode(), not(is(InvocationHandlerAdapter.toInstanceField(FOO).hashCode())));
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX), not(is(InvocationHandlerAdapter.toInstanceField(FOO))));
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX).hashCode(), not(is(InvocationHandlerAdapter.of(new Foo(BAR), QUX).hashCode())));
-        assertThat(InvocationHandlerAdapter.toInstanceField(QUX), not(is(InvocationHandlerAdapter.of(new Foo(BAR), QUX))));
+    @Test(expected = IllegalStateException.class)
+    public void testNonExistentField() throws Exception {
+        new ByteBuddy()
+                .subclass(Object.class)
+                .defineMethod(FOO, void.class)
+                .intercept(InvocationHandlerAdapter.toField(QUX))
+                .make();
     }
 
-    @Test
-    public void testObjectProperties() throws Exception {
-        ObjectPropertyAssertion.of(InvocationHandlerAdapter.ForInstanceDelegation.class).apply();
-        ObjectPropertyAssertion.of(InvocationHandlerAdapter.ForInstanceDelegation.Appender.class).apply();
-        ObjectPropertyAssertion.of(InvocationHandlerAdapter.ForStaticDelegation.class).skipSynthetic().apply();
-        ObjectPropertyAssertion.of(InvocationHandlerAdapter.ForStaticDelegation.Appender.class).apply();
+    @Test(expected = IllegalStateException.class)
+    public void testIncompatibleFieldType() throws Exception {
+        new ByteBuddy()
+                .subclass(Object.class)
+                .defineField(QUX, Object.class)
+                .defineMethod(FOO, void.class)
+                .intercept(InvocationHandlerAdapter.toField(QUX))
+                .make();
     }
 
     private static class Foo implements InvocationHandler {
@@ -145,14 +194,9 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
 
         private Foo() {
             marker = FOO;
-            methods = new LinkedList<Method>();
+            methods = new ArrayList<Method>();
         }
 
-        private Foo(String marker) {
-            this.marker = marker;
-        }
-
-        @Override
         public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
             methods.add(method);
             assertThat(args.length, is(1));
@@ -163,14 +207,14 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
         }
 
         @Override
-        public boolean equals(Object other) {
-            return this == other || !(other == null || getClass() != other.getClass())
-                    && marker.equals(((Foo) other).marker);
+        public int hashCode() {
+            return marker.hashCode();
         }
 
         @Override
-        public int hashCode() {
-            return marker.hashCode();
+        public boolean equals(Object other) {
+            return this == other || !(other == null || getClass() != other.getClass())
+                    && marker.equals(((Foo) other).marker);
         }
     }
 
@@ -184,7 +228,6 @@ public class InvocationHandlerAdapterTest extends AbstractImplementationTest {
 
     private static class Qux implements InvocationHandler {
 
-        @Override
         public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
             return ((Integer) args[0]) * 2L;
         }
