@@ -1,11 +1,13 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.description.enumeration.EnumerationDescription;
 import net.bytebuddy.description.type.TypeDescription;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
+import net.bytebuddy.implementation.bytecode.assign.Assigner;
 import net.bytebuddy.test.utility.JavaVersionRule;
-import net.bytebuddy.test.utility.ObjectPropertyAssertion;
-import net.bytebuddy.utility.JavaInstance;
+import net.bytebuddy.utility.JavaConstant;
 import net.bytebuddy.utility.JavaType;
 import org.junit.Rule;
 import org.junit.Test;
@@ -14,6 +16,8 @@ import org.junit.rules.MethodRule;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutorService;
 
 import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
 import static net.bytebuddy.matcher.ElementMatchers.named;
@@ -21,7 +25,7 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.nullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-public class InvokeDynamicTest extends AbstractImplementationTest {
+public class InvokeDynamicTest {
 
     public static final String INSTANCE = "INSTANCE";
 
@@ -45,21 +49,9 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
 
     private static final Class<?> CLASS = Object.class;
 
-    private static final String STANDARD_ARGUMENT_BOOTSTRAP = "net.bytebuddy.test.precompiled.StandardArgumentBootstrap";
+    private static final String BOOTSTRAP_CLASS = "net.bytebuddy.test.precompiled.DynamicInvokeBootstrap";
 
-    private static final String PARAMETER_BOOTSTRAP = "net.bytebuddy.test.precompiled.ParameterBootstrap";
-
-    private static final String ARGUMENT_BOOTSTRAP = "net.bytebuddy.test.precompiled.ArgumentBootstrap";
-
-    public static final String SAMPLE_ENUM = ARGUMENT_BOOTSTRAP + "$SampleEnum";
-
-    private static final String BOOTSTRAP_EXPLICIT_ARGUMENTS = "bootstrapExplicitArguments";
-
-    private static final String BOOTSTRAP_ARRAY_ARGUMENTS = "bootstrapArrayArguments";
-
-    private static final String ARGUMENTS_FIELD_NAME = "arguments";
-
-    private static final String BOOTSTRAP = "bootstrap";
+    private static final String SAMPLE_ENUM = BOOTSTRAP_CLASS + "$SampleEnum";
 
     @Rule
     public MethodRule javaVersionRule = new JavaVersionRule();
@@ -77,61 +69,69 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapMethod() throws Exception {
-        for (Method method : Class.forName(STANDARD_ARGUMENT_BOOTSTRAP).getDeclaredMethods()) {
-            if (method.getName().equals(FOO)) {
+        for (Method method : Class.forName(BOOTSTRAP_CLASS).getDeclaredMethods()) {
+            if (!method.getName().equals("bootstrap")) {
                 continue;
             }
-            DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                    InvokeDynamic.bootstrap(method).withoutArguments(),
-                    getClass().getClassLoader(),
-                    isDeclaredBy(Simple.class));
-            assertThat(dynamicType.getLoaded().newInstance().foo(), is(FOO));
+            DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                    .subclass(Simple.class)
+                    .method(isDeclaredBy(Simple.class))
+                    .intercept(InvokeDynamic.bootstrap(method).withoutArguments())
+                    .make()
+                    .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+            assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), is(FOO));
         }
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapConstructor() throws Exception {
-        for (Constructor<?> constructor : Class.forName(STANDARD_ARGUMENT_BOOTSTRAP).getDeclaredConstructors()) {
-            DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                    InvokeDynamic.bootstrap(constructor).withoutArguments(),
-                    getClass().getClassLoader(),
-                    isDeclaredBy(Simple.class));
-            assertThat(dynamicType.getLoaded().newInstance().foo(), is(FOO));
+        for (Constructor<?> constructor : Class.forName(BOOTSTRAP_CLASS).getDeclaredConstructors()) {
+            DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                    .subclass(Simple.class)
+                    .method(isDeclaredBy(Simple.class))
+                    .intercept(InvokeDynamic.bootstrap(constructor).withoutArguments())
+                    .make()
+                    .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+            assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), is(FOO));
         }
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithArrayArgumentsWithoutArguments() throws Exception {
-        Class<?> type = Class.forName(PARAMETER_BOOTSTRAP);
-        Field field = type.getDeclaredField(ARGUMENTS_FIELD_NAME);
+        Class<?> type = Class.forName(BOOTSTRAP_CLASS);
+        Field field = type.getField("arguments");
         field.set(null, null);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP_ARRAY_ARGUMENTS)).getOnly())
-                        .withoutArguments(),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
-        assertThat(dynamicType.getLoaded().newInstance().foo(), is(FOO));
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(type);
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapArrayArguments")).getOnly())
+                        .withoutArguments())
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), is(FOO));
         Object[] arguments = (Object[]) field.get(null);
         assertThat(arguments.length, is(0));
     }
 
     @Test
-    @JavaVersionRule.Enforce(7)
+    @JavaVersionRule.Enforce(value = 7, hotSpot = 7)
     public void testBootstrapWithArrayArgumentsWithArguments() throws Exception {
-        Class<?> type = Class.forName(PARAMETER_BOOTSTRAP);
-        Field field = type.getDeclaredField(ARGUMENTS_FIELD_NAME);
+        Class<?> type = Class.forName(BOOTSTRAP_CLASS);
+        Field field = type.getField("arguments");
         field.set(null, null);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP_ARRAY_ARGUMENTS)).getOnly(),
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(type);
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapArrayArguments")).getOnly(),
                         INTEGER, LONG, FLOAT, DOUBLE, FOO, CLASS, makeMethodType(CLASS), makeMethodHandle())
-                        .withoutArguments(),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
-        assertThat(dynamicType.getLoaded().newInstance().foo(), is(FOO));
+                        .withoutArguments())
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), is(FOO));
         Object[] arguments = (Object[]) field.get(null);
         assertThat(arguments.length, is(8));
         assertThat(arguments[0], is((Object) INTEGER));
@@ -141,23 +141,25 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
         assertThat(arguments[4], is((Object) FOO));
         assertThat(arguments[5], is((Object) CLASS));
         assertThat(arguments[6], is(makeMethodType(CLASS)));
-        assertThat(JavaInstance.MethodHandle.of(arguments[7]), is(JavaInstance.MethodHandle.of(makeMethodHandle())));
+        assertThat(JavaConstant.MethodHandle.ofLoaded(arguments[7]), is(JavaConstant.MethodHandle.ofLoaded(makeMethodHandle())));
     }
 
     @Test
-    @JavaVersionRule.Enforce(7)
+    @JavaVersionRule.Enforce(value = 7, hotSpot = 7)
     public void testBootstrapWithExplicitArgumentsWithArguments() throws Exception {
-        Class<?> type = Class.forName(PARAMETER_BOOTSTRAP);
-        Field field = type.getDeclaredField(ARGUMENTS_FIELD_NAME);
+        Class<?> type = Class.forName(BOOTSTRAP_CLASS);
+        Field field = type.getField("arguments");
         field.set(null, null);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP_EXPLICIT_ARGUMENTS)).getOnly(),
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(type);
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapExplicitArguments")).getOnly(),
                         INTEGER, LONG, FLOAT, DOUBLE, FOO, CLASS, makeMethodType(CLASS), makeMethodHandle())
-                        .withoutArguments(),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
-        assertThat(dynamicType.getLoaded().newInstance().foo(), is(FOO));
+                        .withoutArguments())
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), is(FOO));
         Object[] arguments = (Object[]) field.get(null);
         assertThat(arguments.length, is(8));
         assertThat(arguments[0], is((Object) INTEGER));
@@ -167,23 +169,25 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
         assertThat(arguments[4], is((Object) FOO));
         assertThat(arguments[5], is((Object) CLASS));
         assertThat(arguments[6], is(makeMethodType(CLASS)));
-        assertThat(JavaInstance.MethodHandle.of(arguments[7]), is(JavaInstance.MethodHandle.of(makeMethodHandle())));
+        assertThat(JavaConstant.MethodHandle.ofLoaded(arguments[7]), is(JavaConstant.MethodHandle.ofLoaded(makeMethodHandle())));
     }
 
     @Test(expected = IllegalArgumentException.class)
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithExplicitArgumentsWithoutArgumentsThrowsException() throws Exception {
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(Class.forName(PARAMETER_BOOTSTRAP));
-        InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP_EXPLICIT_ARGUMENTS)).getOnly()).withoutArguments();
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapExplicitArguments")).getOnly()).withoutArguments();
     }
 
     @Test
-    @JavaVersionRule.Enforce(7)
+    @JavaVersionRule.Enforce(value = 7, hotSpot = 7)
     public void testBootstrapOfMethodsWithParametersPrimitive() throws Exception {
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(Class.forName(ARGUMENT_BOOTSTRAP));
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
         Object value = new Object();
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(FOO, String.class)
                         .withBooleanValue(BOOLEAN)
                         .withByteValue(BYTE)
@@ -193,32 +197,33 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
                         .withLongValue(LONG)
                         .withFloatValue(FLOAT)
                         .withDoubleValue(DOUBLE)
-                        .withType(new TypeDescription.ForLoadedType(CLASS))
+                        .withType(TypeDescription.ForLoadedType.of(CLASS))
                         .withEnumeration(new EnumerationDescription.ForLoadedEnumeration(makeEnum()))
-                        .withInstance(JavaInstance.MethodType.of(makeMethodType(CLASS)), JavaInstance.MethodHandle.of(makeMethodHandle()))
-                        .withValue(FOO, CLASS, makeEnum(), makeMethodType(CLASS), makeMethodHandle(), value),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
-        assertThat(dynamicType.getLoaded().newInstance().foo(),
+                        .withInstance(JavaConstant.MethodType.ofLoaded(makeMethodType(CLASS)), JavaConstant.MethodHandle.ofLoaded(makeMethodHandle()))
+                        .withValue(FOO, CLASS, makeEnum(), makeMethodType(CLASS), makeMethodHandle(), value))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(),
                 is("" + BOOLEAN + BYTE + SHORT + CHARACTER + INTEGER + LONG + FLOAT + DOUBLE + CLASS + makeEnum() + makeMethodType(CLASS)
                         + makeMethodHandle() + FOO + CLASS + makeEnum() + makeMethodType(CLASS) + makeMethodHandle() + value));
     }
 
     @Test
-    @JavaVersionRule.Enforce(7)
+    @JavaVersionRule.Enforce(value = 7, hotSpot = 7)
     public void testBootstrapOfMethodsWithParametersWrapperConstantPool() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
         Object value = new Object();
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(BAR, String.class)
                         .withValue(BOOLEAN, BYTE, SHORT, CHARACTER, INTEGER, LONG, FLOAT, DOUBLE, FOO,
-                                CLASS, makeEnum(), makeMethodType(CLASS), makeMethodHandle(), value),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
+                                CLASS, makeEnum(), makeMethodType(CLASS), makeMethodHandle(), value))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(1));
-        assertThat(dynamicType.getLoaded().newInstance().foo(),
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(),
                 is("" + BOOLEAN + BYTE + SHORT + CHARACTER + INTEGER + LONG + FLOAT + DOUBLE + FOO + CLASS + makeEnum()
                         + makeMethodType(CLASS) + makeMethodHandle() + value));
     }
@@ -226,19 +231,20 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapOfMethodsWithParametersWrapperReference() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
         Object value = new Object();
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(BAR, String.class)
                         .withReference(BOOLEAN, BYTE, SHORT, CHARACTER, INTEGER, LONG, FLOAT, DOUBLE, FOO, CLASS, makeEnum(), makeMethodType(CLASS))
                         .withReference(makeMethodHandle()).as(JavaType.METHOD_HANDLE.load()) // avoid direct method handle
-                        .withReference(value),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
+                        .withReference(value))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(14));
-        assertThat(dynamicType.getLoaded().newInstance().foo(),
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(),
                 is("" + BOOLEAN + BYTE + SHORT + CHARACTER + INTEGER + LONG + FLOAT + DOUBLE + FOO + CLASS + makeEnum()
                         + makeMethodType(CLASS) + makeMethodHandle() + value));
     }
@@ -246,16 +252,18 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithFieldCreation() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .defineField(FOO, String.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withInstanceField(FOO, String.class),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
+                        .withField(FOO))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(1));
-        Simple instance = dynamicType.getLoaded().newInstance();
+        Simple instance = dynamicType.getLoaded().getDeclaredConstructor().newInstance();
         Field field = dynamicType.getLoaded().getDeclaredField(FOO);
         field.setAccessible(true);
         field.set(instance, FOO);
@@ -264,17 +272,68 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
 
     @Test
     @JavaVersionRule.Enforce(7)
-    public void testBootstrapWithFieldUse() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<SimpleWithField> dynamicType = implement(SimpleWithField.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+    public void testBootstrapWithFieldExplicitType() throws Exception {
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .defineField(FOO, Object.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withField(FOO),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithField.class));
+                        .withField(FOO).as(String.class)
+                        .withAssigner(Assigner.DEFAULT, Assigner.Typing.DYNAMIC))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(1));
+        Simple instance = dynamicType.getLoaded().getDeclaredConstructor().newInstance();
+        Field field = dynamicType.getLoaded().getDeclaredField(FOO);
+        field.setAccessible(true);
+        field.set(instance, FOO);
+        assertThat(instance.foo(), is(FOO));
+    }
+
+    @Test(expected = IllegalStateException.class)
+    @JavaVersionRule.Enforce(7)
+    public void testBootstrapFieldNotExistent() throws Exception {
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
+                        .invoke(QUX, String.class)
+                        .withField(FOO)
+                        .withAssigner(Assigner.DEFAULT, Assigner.Typing.DYNAMIC))
+                .make();
+    }
+
+    @Test(expected = IllegalStateException.class)
+    @JavaVersionRule.Enforce(7)
+    public void testBootstrapFieldNotAssignable() throws Exception {
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        new ByteBuddy()
+                .subclass(Simple.class)
+                .defineField(FOO, Object.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
+                        .invoke(QUX, String.class)
+                        .withField(FOO).as(String.class))
+                .make();
+    }
+
+    @Test
+    @JavaVersionRule.Enforce(7)
+    public void testBootstrapWithFieldUse() throws Exception {
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<SimpleWithField> dynamicType = new ByteBuddy()
+                .subclass(SimpleWithField.class)
+                .method(isDeclaredBy(SimpleWithField.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
+                        .invoke(QUX, String.class)
+                        .withField(FOO))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        SimpleWithField instance = dynamicType.getLoaded().newInstance();
+        SimpleWithField instance = dynamicType.getLoaded().getDeclaredConstructor().newInstance();
         Field field = SimpleWithField.class.getDeclaredField(FOO);
         field.setAccessible(true);
         field.set(instance, FOO);
@@ -284,68 +343,71 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithFieldUseInvisible() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        implement(SimpleWithFieldInvisible.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        new ByteBuddy()
+                .subclass(SimpleWithFieldInvisible.class)
+                .method(isDeclaredBy(SimpleWithFieldInvisible.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withField(FOO),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithFieldInvisible.class));
+                        .withField(FOO))
+                .make();
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithNullValue() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withNullValue(String.class),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
+                        .withNullValue(String.class))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        assertThat(dynamicType.getLoaded().newInstance().foo(), nullValue(String.class));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(), nullValue(String.class));
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithThisValue() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<Simple> dynamicType = implement(Simple.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<Simple> dynamicType = new ByteBuddy()
+                .subclass(Simple.class)
+                .method(isDeclaredBy(Simple.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(BAZ, String.class)
-                        .withThis(Object.class),
-                getClass().getClassLoader(),
-                isDeclaredBy(Simple.class));
+                        .withThis(Object.class))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        Simple simple = dynamicType.getLoaded().newInstance();
+        Simple simple = dynamicType.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(simple.foo(), is(simple.toString()));
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithArgument() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<SimpleWithArgument> dynamicType = implement(SimpleWithArgument.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<SimpleWithArgument> dynamicType = new ByteBuddy()
+                .subclass(SimpleWithArgument.class)
+                .method(isDeclaredBy(SimpleWithArgument.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withArgument(0),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithArgument.class));
+                        .withArgument(0))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        assertThat(dynamicType.getLoaded().newInstance().foo(FOO), is(FOO));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(FOO), is(FOO));
     }
 
     @Test(expected = IllegalArgumentException.class)
     @JavaVersionRule.Enforce(7)
     public void testNegativeArgumentThrowsException() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        Class<?> type = Class.forName(BOOTSTRAP_CLASS);
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(type);
+        InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                 .invoke(QUX, String.class)
                 .withArgument(-1);
     }
@@ -353,92 +415,112 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
     @Test(expected = IllegalStateException.class)
     @JavaVersionRule.Enforce(7)
     public void testNonExistentArgumentThrowsException() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        implement(SimpleWithArgument.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        new ByteBuddy()
+                .subclass(SimpleWithArgument.class)
+                .method(isDeclaredBy(SimpleWithArgument.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withArgument(1),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithArgument.class));
+                        .withArgument(1))
+                .make();
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testChainedInvocation() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<SimpleWithArgument> dynamicType = implement(SimpleWithArgument.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<SimpleWithArgument> dynamicType = new ByteBuddy()
+                .subclass(SimpleWithArgument.class)
+                .method(isDeclaredBy(SimpleWithArgument.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
                         .withArgument(0)
-                        .andThen(FixedValue.value(BAZ)),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithArgument.class));
+                        .andThen(FixedValue.value(BAZ)))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        assertThat(dynamicType.getLoaded().newInstance().foo(FOO), is(BAZ));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(FOO), is(BAZ));
     }
 
     @Test
     @JavaVersionRule.Enforce(7)
     public void testBootstrapWithImplicitArgument() throws Exception {
-        Class<?> type = Class.forName(ARGUMENT_BOOTSTRAP);
-        TypeDescription typeDescription = new TypeDescription.ForLoadedType(type);
-        DynamicType.Loaded<SimpleWithArgument> dynamicType = implement(SimpleWithArgument.class,
-                InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named(BOOTSTRAP)).getOnly())
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(Class.forName(BOOTSTRAP_CLASS));
+        DynamicType.Loaded<SimpleWithArgument> dynamicType = new ByteBuddy()
+                .subclass(SimpleWithArgument.class)
+                .method(isDeclaredBy(SimpleWithArgument.class))
+                .intercept(InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
                         .invoke(QUX, String.class)
-                        .withMethodArguments(),
-                getClass().getClassLoader(),
-                isDeclaredBy(SimpleWithArgument.class));
+                        .withMethodArguments())
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
         assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
-        assertThat(dynamicType.getLoaded().newInstance().foo(FOO), is(FOO));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().foo(FOO), is(FOO));
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    @JavaVersionRule.Enforce(7)
+    public void testArgumentCannotAssignIllegalInstanceType() throws Exception {
+        Class<?> type = Class.forName(BOOTSTRAP_CLASS);
+        TypeDescription typeDescription = TypeDescription.ForLoadedType.of(type);
+        InvokeDynamic.bootstrap(typeDescription.getDeclaredMethods().filter(named("bootstrapSimple")).getOnly())
+                .invoke(QUX, String.class)
+                .withReference(new Object()).as(String.class);
+    }
+
+    @Test
+    @JavaVersionRule.Enforce(8)
+    public void testLambdaMetaFactory() throws Exception {
+        DynamicType.Loaded<FunctionalFactory> dynamicType = new ByteBuddy()
+                .subclass(FunctionalFactory.class)
+                .method(isDeclaredBy(FunctionalFactory.class))
+                .intercept(InvokeDynamic.lambda(InvokeDynamicTest.class.getMethod("value"), Callable.class))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().make().call(), is(FOO));
+    }
+
+    @Test
+    @JavaVersionRule.Enforce(8)
+    public void testLambdaMetaFactoryWithArgument() throws Exception {
+        DynamicType.Loaded<FunctionalFactoryWithValue> dynamicType = new ByteBuddy()
+                .subclass(FunctionalFactoryWithValue.class)
+                .method(isDeclaredBy(FunctionalFactoryWithValue.class))
+                .intercept(InvokeDynamic.lambda(InvokeDynamicTest.class.getMethod("value", String.class), Callable.class).withArgument(0))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().make(BAR).call(), is(FOO + BAR));
+    }
+
+    @Test(expected = LinkageError.class)
+    @JavaVersionRule.Enforce(8)
+    public void testLambdaMetaFactoryIllegalBinding() throws Exception {
+        DynamicType.Loaded<FunctionalFactory> dynamicType = new ByteBuddy()
+                .subclass(FunctionalFactory.class)
+                .method(isDeclaredBy(FunctionalFactory.class))
+                .intercept(InvokeDynamic.lambda(InvokeDynamicTest.class.getMethod("value"), Callable.class).withValue(FOO))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        assertThat(dynamicType.getLoaded().getDeclaredFields().length, is(0));
+        assertThat(dynamicType.getLoaded().getDeclaredConstructor().newInstance().make().call(), is(FOO));
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testLambdaMetaFactoryNoInterface() throws Exception {
+        InvokeDynamic.lambda(InvokeDynamicTest.class.getMethod("value"), Object.class);
+    }
+
+    @Test(expected = IllegalArgumentException.class)
+    public void testLambdaMetaFactoryNoFunctionalInterface() throws Exception {
+        InvokeDynamic.lambda(InvokeDynamicTest.class.getMethod("value"), ExecutorService.class);
     }
 
     @SuppressWarnings("unchecked")
     private Enum<?> makeEnum() throws Exception {
         Class type = Class.forName(SAMPLE_ENUM);
         return Enum.valueOf(type, INSTANCE);
-    }
-
-    @Test
-    public void testObjectProperties() throws Exception {
-        ObjectPropertyAssertion.of(InvokeDynamic.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.Appender.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.WithImplicitTarget.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.WithImplicitArguments.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.Default.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.Default.Target.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.Target.Resolved.Simple.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.Target.ForMethodDescription.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.NameProvider.ForExplicitName.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.NameProvider.ForInterceptedMethod.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ReturnTypeProvider.ForInterceptedMethod.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ReturnTypeProvider.ForExplicitType.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForBooleanConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForByteConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForShortConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForCharacterConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForIntegerConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForLongConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForFloatConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForDoubleConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForStringConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForClassConstant.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForEnumerationValue.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForExistingField.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForInstanceField.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForStaticField.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForThisInstance.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForJavaInstance.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForMethodParameter.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForExplicitTypedMethodParameter.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ConstantPoolWrapper.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ConstantPoolWrapper.WrappingArgumentProvider.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForInterceptedMethodParameters.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.ForInterceptedMethodInstanceAndParameters.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.InvocationProvider.ArgumentProvider.Resolved.Simple.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.TerminationHandler.ForMethodReturn.class).apply();
-        ObjectPropertyAssertion.of(InvokeDynamic.TerminationHandler.ForChainedInvocation.class).apply();
     }
 
     public static class Simple {
@@ -471,5 +553,34 @@ public class InvokeDynamicTest extends AbstractImplementationTest {
         public String foo(String arg) {
             return null;
         }
+    }
+
+    public static class SimpleWithMethod {
+
+        public Callable<String> foo(String arg) {
+            return null;
+        }
+
+        private static String bar(String arg) {
+            return arg;
+        }
+    }
+
+    public interface FunctionalFactory {
+
+        Callable<String> make();
+    }
+
+    public interface FunctionalFactoryWithValue {
+
+        Callable<String> make(String argument);
+    }
+
+    public static String value() {
+        return FOO;
+    }
+
+    public static String value(String argument) {
+        return FOO + argument;
     }
 }
