@@ -1,13 +1,16 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 import net.bytebuddy.implementation.bind.annotation.AllArguments;
 import org.junit.Test;
 
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
+import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.core.Is.is;
 
-public class MethodDelegationAllArgumentsTest extends AbstractImplementationTest {
+public class MethodDelegationAllArgumentsTest {
 
     private static final int FOO = 42, BAR = 21;
 
@@ -15,27 +18,57 @@ public class MethodDelegationAllArgumentsTest extends AbstractImplementationTest
 
     @Test
     public void testStrictBindable() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(Bar.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(Bar.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
+        assertThat(instance.foo(FOO, BAR), is((Object) (QUX + FOO + BAR)));
+    }
+
+    @Test
+    public void testStrictBindableObjectType() throws Exception {
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(FooBar.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(FOO, BAR), is((Object) (QUX + FOO + BAR)));
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testStrictNonBindableThrowsException() throws Exception {
-        implement(Qux.class, MethodDelegation.to(BazStrict.class));
+        new ByteBuddy()
+                .subclass(Qux.class).method(isDeclaredBy(Qux.class))
+                .intercept(MethodDelegation.to(BazStrict.class))
+                .make();
     }
 
     @Test
     public void testSlackNonBindable() throws Exception {
-        DynamicType.Loaded<Qux> loaded = implement(Qux.class, MethodDelegation.to(BazSlack.class));
-        Qux instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Qux> loaded = new ByteBuddy()
+                .subclass(Qux.class)
+                .method(isDeclaredBy(Qux.class))
+                .intercept(MethodDelegation.to(BazSlack.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Qux instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(FOOBAR, BAZ), is((Object) (QUX + BAZ)));
     }
 
     @Test
     public void testIncludeSelf() throws Exception {
-        DynamicType.Loaded<Qux> loaded = implement(Qux.class, MethodDelegation.to(IncludeSelf.class));
-        Qux instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Qux> loaded = new ByteBuddy()
+                .subclass(Qux.class)
+                .method(isDeclaredBy(Qux.class))
+                .intercept(MethodDelegation.to(IncludeSelf.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Qux instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(QUX, BAZ), is((Object) instance));
     }
 
@@ -50,6 +83,13 @@ public class MethodDelegationAllArgumentsTest extends AbstractImplementationTest
 
         public static String qux(@AllArguments int[] args) {
             return QUX + args[0] + args[1];
+        }
+    }
+
+    public static class FooBar {
+
+        public static String qux(@AllArguments Object args) {
+            return QUX + ((Object[]) args)[0] + ((Object[]) args)[1];
         }
     }
 
