@@ -1,21 +1,29 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 import net.bytebuddy.implementation.bind.annotation.FieldValue;
 import net.bytebuddy.implementation.bind.annotation.RuntimeType;
 import org.junit.Test;
 
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
+public class MethodDelegationFieldValueTest {
 
     private static final String FOO = "foo", BAR = "bar";
 
     @Test
     public void testLegalFieldAccess() throws Exception {
-        DynamicType.Loaded<SimpleField> loaded = implement(SimpleField.class, MethodDelegation.to(SimpleInterceptor.class));
-        SimpleField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<SimpleField> loaded = new ByteBuddy()
+                .subclass(SimpleField.class)
+                .method(isDeclaredBy(SimpleField.class))
+                .intercept(MethodDelegation.to(SimpleInterceptor.class))
+                .make()
+                .load(SimpleField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         instance.foo = BAR;
@@ -24,8 +32,13 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     @Test
     public void testLegalFieldAccessStatic() throws Exception {
-        DynamicType.Loaded<SimpleStaticField> loaded = implement(SimpleStaticField.class, MethodDelegation.to(SimpleInterceptor.class));
-        SimpleStaticField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<SimpleStaticField> loaded = new ByteBuddy()
+                .subclass(SimpleStaticField.class)
+                .method(isDeclaredBy(SimpleStaticField.class))
+                .intercept(MethodDelegation.to(SimpleInterceptor.class))
+                .make()
+                .load(SimpleStaticField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleStaticField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         SimpleStaticField.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         SimpleStaticField.foo = BAR;
@@ -34,13 +47,22 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     @Test(expected = IllegalArgumentException.class)
     public void testNonAssignableFieldAccess() throws Exception {
-        implement(SimpleField.class, MethodDelegation.to(NonAssignableInterceptor.class));
+        new ByteBuddy()
+                .subclass(SimpleField.class)
+                .method(isDeclaredBy(SimpleField.class))
+                .intercept(MethodDelegation.to(NonAssignableInterceptor.class))
+                .make();
     }
 
     @Test
     public void testLegalFieldAccessDynamicTyping() throws Exception {
-        DynamicType.Loaded<SimpleStaticField> loaded = implement(SimpleStaticField.class, MethodDelegation.to(DynamicInterceptor.class));
-        SimpleStaticField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<SimpleStaticField> loaded = new ByteBuddy()
+                .subclass(SimpleStaticField.class)
+                .method(isDeclaredBy(SimpleStaticField.class))
+                .intercept(MethodDelegation.to(DynamicInterceptor.class))
+                .make()
+                .load(SimpleStaticField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleStaticField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         SimpleStaticField.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         SimpleStaticField.foo = BAR;
@@ -49,8 +71,13 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     @Test
     public void testExtendedFieldMostSpecific() throws Exception {
-        DynamicType.Loaded<ExtendedField> loaded = implement(ExtendedField.class, MethodDelegation.to(SimpleInterceptor.class));
-        ExtendedField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<ExtendedField> loaded = new ByteBuddy()
+                .subclass(ExtendedField.class)
+                .method(isDeclaredBy(ExtendedField.class))
+                .intercept(MethodDelegation.to(SimpleInterceptor.class))
+                .make()
+                .load(ExtendedField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        ExtendedField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         instance.foo = BAR;
@@ -59,8 +86,13 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     @Test
     public void testExtendedFieldSkipsNonVisible() throws Exception {
-        DynamicType.Loaded<ExtendedPrivateField> loaded = implement(ExtendedPrivateField.class, MethodDelegation.to(SimpleInterceptor.class));
-        SimpleField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<ExtendedPrivateField> loaded = new ByteBuddy()
+                .subclass(ExtendedPrivateField.class)
+                .method(isDeclaredBy(ExtendedPrivateField.class))
+                .intercept(MethodDelegation.to(SimpleInterceptor.class))
+                .make()
+                .load(ExtendedPrivateField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         instance.foo = BAR;
@@ -69,12 +101,33 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     @Test
     public void testExtendedFieldExplicitType() throws Exception {
-        DynamicType.Loaded<ExtendedField> loaded = implement(ExtendedField.class, MethodDelegation.to(ExplicitInterceptor.class));
-        SimpleField instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<ExtendedField> loaded = new ByteBuddy()
+                .subclass(ExtendedField.class)
+                .method(isDeclaredBy(ExtendedField.class))
+                .intercept(MethodDelegation.to(ExplicitInterceptor.class))
+                .make()
+                .load(ExtendedField.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleField instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo = FOO;
         assertThat(instance.foo(), is((Object) FOO));
         instance.foo = BAR;
         assertThat(instance.foo(), is((Object) BAR));
+    }
+
+    @Test
+    public void testAccessor() throws Exception {
+        DynamicType.Loaded<SimpleFieldAccessor> loaded = new ByteBuddy()
+                .subclass(SimpleFieldAccessor.class)
+                .method(isDeclaredBy(SimpleFieldAccessor.class))
+                .intercept(MethodDelegation.to(SimpleAccessorInterceptor.class))
+                .make()
+                .load(SimpleFieldAccessor.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        SimpleFieldAccessor instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
+        instance.foo = FOO;
+        assertThat(instance.getFoo(), is((Object) FOO));
+        instance.foo = BAR;
+        instance.setFoo(FOO);
+        assertThat(instance.foo, is((Object) BAR));
     }
 
     public static class SimpleField {
@@ -120,7 +173,6 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
         public Object foo;
 
-        @Override
         public Object foo() {
             return null;
         }
@@ -130,7 +182,6 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
         private Object foo;
 
-        @Override
         public Object foo() {
             return null;
         }
@@ -138,7 +189,27 @@ public class MethodDelegationFieldValueTest extends AbstractImplementationTest {
 
     public static class ExplicitInterceptor {
 
-        public static Object intercept(@FieldValue(value = FOO, definingType = SimpleField.class) Object value) {
+        public static Object intercept(@FieldValue(value = FOO, declaringType = SimpleField.class) Object value) {
+            return value;
+        }
+    }
+
+    public static class SimpleFieldAccessor {
+
+        public Object foo;
+
+        public Object getFoo() {
+            return foo;
+        }
+
+        public void setFoo(Object foo) {
+            this.foo = foo;
+        }
+    }
+
+    public static class SimpleAccessorInterceptor {
+
+        public static Object intercept(@FieldValue Object value) {
             return value;
         }
     }
