@@ -1,6 +1,8 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
 import net.bytebuddy.dynamic.DynamicType;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 import net.bytebuddy.implementation.bind.annotation.Morph;
 import net.bytebuddy.test.utility.CallTraceable;
 import net.bytebuddy.test.utility.JavaVersionRule;
@@ -11,12 +13,12 @@ import org.junit.rules.MethodRule;
 
 import java.io.Serializable;
 
-import static net.bytebuddy.matcher.ElementMatchers.*;
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
 import static org.hamcrest.CoreMatchers.instanceOf;
 import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-public class MethodDelegationMorphTest extends AbstractImplementationTest {
+public class MethodDelegationMorphTest {
 
     private static final String FOO = "foo", BAR = "bar", QUX = "qux";
 
@@ -33,18 +35,30 @@ public class MethodDelegationMorphTest extends AbstractImplementationTest {
 
     @Test
     public void testMorph() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(new SimpleMorph(QUX))
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(new SimpleMorph(QUX)))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(FOO), is(QUX + BAR));
     }
 
     @Test
     public void testMorphVoid() throws Exception {
         SimpleMorph simpleMorph = new SimpleMorph(QUX);
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, MethodDelegation.to(simpleMorph)
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
-        Bar instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(simpleMorph))
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo();
         instance.assertOnlyCall(FOO);
         simpleMorph.assertOnlyCall(BAR);
@@ -52,69 +66,94 @@ public class MethodDelegationMorphTest extends AbstractImplementationTest {
 
     @Test
     public void testMorphPrimitive() throws Exception {
-        DynamicType.Loaded<Qux> loaded = implement(Qux.class, MethodDelegation.to(new PrimitiveMorph(BAZ))
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
-        Qux instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Qux> loaded = new ByteBuddy()
+                .subclass(Qux.class)
+                .method(isDeclaredBy(Qux.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(new PrimitiveMorph(BAZ)))
+                .make()
+                .load(Qux.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Qux instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(0), is(BAZ * 2L));
     }
 
     @Test
     public void testMorphSerializable() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(SimpleMorphSerializable.class)
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(SimpleMorphSerializable.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.foo(FOO), is(QUX + BAR));
     }
 
     @Test(expected = IllegalStateException.class)
     public void testMorphIllegal() throws Exception {
-        implement(Foo.class, MethodDelegation.to(SimpleMorphIllegal.class)
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
+        new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(SimpleMorphIllegal.class))
+                .make();
     }
 
     @Test(expected = ClassCastException.class)
     public void testMorphToIncompatibleTypeThrowsException() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(new SimpleMorph(new Object()))
-                .appendParameterBinder(Morph.Binder.install(Morphing.class)));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(new SimpleMorph(new Object())))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         instance.foo(QUX);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testMorphTypeDoesNotDeclareCorrectMethodThrowsException() throws Exception {
-        MethodDelegation.to(new SimpleMorph(QUX)).defineParameterBinder(Morph.Binder.install(Serializable.class));
+        Morph.Binder.install(Serializable.class);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testMorphTypeDoesInheritFromOtherTypeThrowsException() throws Exception {
-        MethodDelegation.to(new SimpleMorph(QUX)).defineParameterBinder(Morph.Binder.install(InheritingMorphingType.class));
+        Morph.Binder.install(InheritingMorphingType.class);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testMorphTypeIsNotPublicThrowsException() throws Exception {
-        MethodDelegation.to(new SimpleMorph(QUX)).defineParameterBinder(Morph.Binder.install(PackagePrivateMorphing.class));
+        Morph.Binder.install(PackagePrivateMorphing.class);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testPipeTypeDoesNotDeclareCorrectMethodSignatureThrowsException() throws Exception {
-        MethodDelegation.to(new SimpleMorph(QUX)).defineParameterBinder(Morph.Binder.install(WrongParametersMorphing.class));
+        Morph.Binder.install(WrongParametersMorphing.class);
     }
 
     @Test(expected = IllegalArgumentException.class)
     public void testPipeTypeIsNotInterfaceThrowsException() throws Exception {
-        MethodDelegation.to(new SimpleMorph(QUX)).defineParameterBinder(Morph.Binder.install(Object.class));
+        MethodDelegation.withDefaultConfiguration().withBinders(Morph.Binder.install(Object.class)).to(new SimpleMorph(QUX));
     }
 
     @Test
     @JavaVersionRule.Enforce(8)
     public void testDefaultMethodExplicit() throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Object.class,
-                MethodDelegation.to(Class.forName(DEFAULT_INTERFACE_TARGET_EXPLICIT))
-                        .appendParameterBinder(Morph.Binder.install(Morphing.class)),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                Class.forName(DEFAULT_INTERFACE));
-        Object instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Object> loaded = new ByteBuddy()
+                .subclass(Object.class)
+                .implement(Class.forName(DEFAULT_INTERFACE))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(Class.forName(DEFAULT_INTERFACE_TARGET_EXPLICIT)))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.getClass().getDeclaredMethod(FOO, String.class)
                 .invoke(instance, QUX), is((Object) (FOO + BAR)));
     }
@@ -122,13 +161,15 @@ public class MethodDelegationMorphTest extends AbstractImplementationTest {
     @Test
     @JavaVersionRule.Enforce(8)
     public void testDefaultMethodImplicit() throws Exception {
-        DynamicType.Loaded<?> loaded = implement(Object.class,
-                MethodDelegation.to(Class.forName(DEFAULT_INTERFACE_TARGET_IMPLICIT))
-                        .appendParameterBinder(Morph.Binder.install(Morphing.class)),
-                getClass().getClassLoader(),
-                isMethod().and(not(isDeclaredBy(Object.class))),
-                Class.forName(DEFAULT_INTERFACE));
-        Object instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Object> loaded = new ByteBuddy()
+                .subclass(Object.class)
+                .implement(Class.forName(DEFAULT_INTERFACE))
+                .intercept(MethodDelegation.withDefaultConfiguration()
+                        .withBinders(Morph.Binder.install(Morphing.class))
+                        .to(Class.forName(DEFAULT_INTERFACE_TARGET_IMPLICIT)))
+                .make()
+                .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Object instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.getClass().getDeclaredMethod(FOO, String.class)
                 .invoke(instance, QUX), is((Object) (FOO + BAR)));
     }
