@@ -1,72 +1,137 @@
 package net.bytebuddy.implementation;
 
+import net.bytebuddy.ByteBuddy;
+import net.bytebuddy.description.modifier.TypeManifestation;
+import net.bytebuddy.description.modifier.Visibility;
+import net.bytebuddy.dynamic.ClassFileLocator;
 import net.bytebuddy.dynamic.DynamicType;
 import net.bytebuddy.dynamic.TargetType;
+import net.bytebuddy.dynamic.loading.ByteArrayClassLoader;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
+import net.bytebuddy.dynamic.loading.InjectionClassLoader;
 import net.bytebuddy.implementation.bind.annotation.Super;
 import org.junit.Test;
 
 import java.io.Serializable;
 
+import static net.bytebuddy.matcher.ElementMatchers.isDeclaredBy;
+import static net.bytebuddy.matcher.ElementMatchers.named;
 import static org.hamcrest.CoreMatchers.*;
 import static org.hamcrest.MatcherAssert.assertThat;
 
-public class MethodDelegationSuperTest extends AbstractImplementationTest {
+public class MethodDelegationSuperTest {
 
     private static final String FOO = "foo", BAR = "bar", QUX = "qux";
 
     @Test
     public void testSuperInstance() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(Baz.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(Baz.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
     }
 
     @Test
     public void testSuperInterface() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(FooBar.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(FooBar.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
     }
 
     @Test
     public void testSuperInstanceUnsafe() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(QuxBaz.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(QuxBaz.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
     }
 
     @Test
     public void testBridgeMethodResolution() throws Exception {
-        DynamicType.Loaded<Bar> loaded = implement(Bar.class, MethodDelegation.to(GenericBaz.class));
-        Bar instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Bar> loaded = new ByteBuddy()
+                .subclass(Bar.class)
+                .method(isDeclaredBy(Bar.class))
+                .intercept(MethodDelegation.to(GenericBaz.class))
+                .make()
+                .load(Bar.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Bar instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(BAR), is(BAR + QUX));
     }
 
     @Test(expected = AbstractMethodError.class)
     public void testSuperCallOnAbstractMethod() throws Exception {
-        DynamicType.Loaded<FooBarQuxBaz> loaded = implement(FooBarQuxBaz.class, MethodDelegation.to(FooBar.class));
-        loaded.getLoaded().newInstance().qux();
+        DynamicType.Loaded<FooBarQuxBaz> loaded = new ByteBuddy()
+                .subclass(FooBarQuxBaz.class)
+                .method(isDeclaredBy(FooBarQuxBaz.class))
+                .intercept(MethodDelegation.to(FooBar.class))
+                .make()
+                .load(FooBarQuxBaz.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        loaded.getLoaded().getDeclaredConstructor().newInstance().qux();
     }
 
     @Test
     public void testSerializableProxy() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(SerializationCheck.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(SerializationCheck.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
     }
 
     @Test
     public void testTargetTypeProxy() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(TargetTypeTest.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(TargetTypeTest.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
     }
 
     @Test
     public void testExplicitTypeProxy() throws Exception {
-        DynamicType.Loaded<Foo> loaded = implement(Foo.class, MethodDelegation.to(ExplicitTypeTest.class));
-        Foo instance = loaded.getLoaded().newInstance();
+        DynamicType.Loaded<Foo> loaded = new ByteBuddy()
+                .subclass(Foo.class)
+                .method(isDeclaredBy(Foo.class))
+                .intercept(MethodDelegation.to(ExplicitTypeTest.class))
+                .make()
+                .load(Foo.class.getClassLoader(), ClassLoadingStrategy.Default.WRAPPER);
+        Foo instance = loaded.getLoaded().getDeclaredConstructor().newInstance();
         assertThat(instance.qux(), is((Object) (FOO + QUX)));
+    }
+
+    @Test
+    public void testFinalType() throws Exception {
+        InjectionClassLoader classLoader = new ByteArrayClassLoader(ClassLoadingStrategy.BOOTSTRAP_LOADER,
+                false,
+                ClassFileLocator.ForClassLoader.readToNames(SimpleInterceptor.class));
+        Class<?> type = new ByteBuddy()
+                .rebase(FinalType.class)
+                .modifiers(TypeManifestation.PLAIN, Visibility.PUBLIC)
+                .method(named(FOO)).intercept(ExceptionMethod.throwing(RuntimeException.class))
+                .method(named(BAR)).intercept(MethodDelegation.to(SimpleInterceptor.class))
+                .make()
+                .load(classLoader, InjectionClassLoader.Strategy.INSTANCE)
+                .getLoaded();
+        assertThat(type.getDeclaredMethod(BAR).invoke(type.getDeclaredConstructor().newInstance()), is((Object) FOO));
     }
 
     public interface Qux {
@@ -76,7 +141,6 @@ public class MethodDelegationSuperTest extends AbstractImplementationTest {
 
     public static class Foo implements Qux {
 
-        @Override
         public Object qux() {
             return FOO;
         }
@@ -106,9 +170,8 @@ public class MethodDelegationSuperTest extends AbstractImplementationTest {
         }
     }
 
-    public static abstract class FooBarQuxBaz implements Qux {
+    public abstract static class FooBarQuxBaz implements Qux {
 
-        @Override
         public abstract Object qux();
     }
 
@@ -121,7 +184,6 @@ public class MethodDelegationSuperTest extends AbstractImplementationTest {
 
     public static class Bar extends GenericBase<String> {
 
-        @Override
         public String qux(String value) {
             return super.qux(value);
         }
@@ -129,7 +191,7 @@ public class MethodDelegationSuperTest extends AbstractImplementationTest {
 
     public static class GenericBaz {
 
-        public static String baz(@Super GenericBase<String> foo, String value) {
+        public static String baz(String value, @Super GenericBase<String> foo) {
             assertThat(foo, not(instanceOf(Serializable.class)));
             return foo.qux(value) + QUX;
         }
@@ -150,12 +212,31 @@ public class MethodDelegationSuperTest extends AbstractImplementationTest {
             return Foo.class.getDeclaredMethod(QUX).invoke(proxy) + QUX;
         }
     }
+
     public static class ExplicitTypeTest {
 
         public static String baz(@Super(proxyType = Qux.class) Object proxy) throws Exception {
             assertThat(proxy, instanceOf(Qux.class));
             assertThat(proxy, not(instanceOf(Foo.class)));
             return Qux.class.getDeclaredMethod(QUX).invoke(proxy) + QUX;
+        }
+    }
+
+    public static final class FinalType {
+
+        public Object foo() {
+            return FOO;
+        }
+
+        public Object bar() {
+            return null;
+        }
+    }
+
+    public static class SimpleInterceptor {
+
+        public static Object intercept(@Super FinalType finalType) {
+            return finalType.foo();
         }
     }
 }
